--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,18 @@ body {
 .button {
   color: var(--primary-text-color);
   background-color: var(--secondary-white-color);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.button:hover,
+.button:focus {
+  color: var(--butons-text-color);
+  background-color: var(--accent-color);
 }
 
 .button.primary {
@@ -191,6 +203,21 @@ body {
 .logo-title:hover {
   color: var(--accent-color);
 }
+
+.projects {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.projects.description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+}
+
 /* 
 .feature-list .text {
   color: var(--secondary-text-color);
